@@ -297,6 +297,7 @@ Various bugfixes, small features, and a few experimental things:
 * (bug 1805) Initialise $wgContLang before $wgUser
 * (bug 2277) Added Friulian language file
 * Less gratuitous munging of content sample in delete summary
+* badaccess/badaccesstext to supercede sysop*, developer* messages
 
 
 === Caveats ===
